--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/thumbnail.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/proj4js-compressed.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/proj4js-EPSG32651.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/bjornharrtell/jsts/gh-pages/lib/0.16.0/jsts.min.js"></script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
 <script type="text/javascript" >
@@ -54,7 +55,12 @@ var tile_list = [];
 var highlight_layer;
 var jurisdiction_geoms = [];
 var tile_cache = [];
-var interest_bounds; 
+
+var jstsParser = new jsts.io.GeoJSONReader();
+var jstsWriter = new jsts.io.GeoJSONWriter();
+var jstsJurisdictionGeom;
+
+var olGeoJSON = new OpenLayers.Format.GeoJSON();
 //var geoserver = "{{geoserver}}";
 //var geoserver = curr_location+"/geoserver/";
 
@@ -71,11 +77,6 @@ $(document).ready(function(){
            var self = this;
            var json_parser = new OpenLayers.Format.JSON()
            var georef_string = document.getElementById("georef_area").getAttribute("value");
-           /*alert("VALUES:"
-                    +"\nLAZ: "+document.getElementById("laz").checked
-                    +"\nDTM: "+document.getElementById("dtm-tif").checked
-                    +"\nDSM: "+document.getElementById("dsm-tif").checked
-                    +"\nORTHOPHOTO: "+document.getElementById("orthophoto").checked)*/
            var data_classes = []
            if(document.getElementById("laz").checked){
                data_classes.push("LAZ");
@@ -319,11 +320,12 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
          send_notice: send_notice,
          callback: function(response){
              if(response.priv.responseText){
-                 json_parser = new OpenLayers.Format.GeoJSON();
-                 feature_out = json_parser.read(response.priv.responseText);
+                 //json_parser = new OpenLayers.Format.GeoJSON();
+                 feature_out = olGeoJSON.read(response.priv.responseText);
                  var tiles;
                   if (jurisdiction_geoms.length > 0){
-                      tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
+                     // tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
+                     tiles = hasData(feature_out);
                   }else{
                       tiles = hasData(feature_out);
                   }
@@ -373,8 +375,11 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
 function selection_bounds(map_bounds, highlight_layer) {
     
     var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
+    var jstsSelectionBox= jstsParser.read(olGeoJSON.write(transformed_bounds.toGeometry()))
+    var jstsIntersection = jstsJurisdictionGeom.intersection(jstsSelectionBox);
+    var olIntersection = olGeoJSON.read(jstsWriter.write(jstsIntersection));
     
-    var box_filter = new OpenLayers.Filter.Spatial({
+    var intersecting_filter = new OpenLayers.Filter.Spatial({
         type: OpenLayers.Filter.Spatial.INTERSECTS,
         property: "the_geom",
         value: transformed_bounds.toGeometry()
@@ -391,8 +396,9 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
     var response = juris_wfs.read({
       callback: function(response){
             if (response.priv.responseText){
-                var parser = new OpenLayers.Format.GeoJSON();
-                var feature_out =parser.read(response.priv.responseText);
+                //var parser = new OpenLayers.Format.GeoJSON();
+                var feature_out =olGeoJSON.read(response.priv.responseText);
+                jstsJurisdictionGeoms = jstsParser.read(response.priv.responseText);
                 juris_vec_layer.addFeatures(feature_out);
                 jurisdiction_geoms = juris_vec_layer.features;
             }
