--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -404,10 +404,11 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 juris_vec_layer.addFeatures(feature_out);
                 jurisdiction_geoms = juris_vec_layer.features;
                 tmp_geoms=[];
-                
+                console.log(tmp_geoms);
                 for (g in jstsParser.read(response.priv.responseText)){
                     tmp_geoms.push(g.geometry);
                 }
+                console.log(tmp_geoms);
                 geomCombiner = new jsts.geom.util.GeometryCombiner(tmp_geoms);
                 jstsJurisdictionGeoms = geomCombiner.combine();
             }
