--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -405,9 +405,8 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 jurisdiction_geoms = juris_vec_layer.features;
                 tmp_geoms=[];
                 tmp = jstsParser.read(response.priv.responseText);
-                console.log(tmp);
+                console.log(tmp.features);
                 for (g in tmp.features){
-                    console.log(g.geometry);
                     tmp_geoms.push(g.geometry);
                 }
                 console.log(tmp_geoms);
