--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -405,11 +405,11 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 jurisdiction_geoms = juris_vec_layer.features;
                 tmp_geoms=[];
                 tmp = jstsParser.read(response.priv.responseText);
-                console.log(tmp.features);
                 for (g in tmp.features){
+                    console.log(g.id);
                     tmp_geoms.push(g.geometry);
                 }
-                console.log(tmp_geoms);
+                //console.log(tmp_geoms);
                 geomCombiner = new jsts.geom.util.GeometryCombiner(tmp_geoms);
                 jstsJurisdictionGeoms = geomCombiner.combine();
             }
