--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -407,10 +407,10 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 tmp = jstsParser.read(response.priv.responseText);
                 console.log(tmp.features);
                 for (var i=0; i< tmp.features.length; i++){
-                    console.log(tmp.features[i]);
+                    console.log(tmp.features[i].geometry);
                     tmp_geoms.push(tmp.features[i].geometry);
                 }
-                //console.log(tmp_geoms);
+                console.log(tmp_geoms);
                 geomCombiner = new jsts.geom.util.GeometryCombiner(tmp_geoms);
                 jstsJurisdictionGeoms = geomCombiner.combine();
             }
