--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -323,15 +323,17 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
          send_notice: send_notice,
          callback: function(response){
              if(response.priv.responseText){
+                 start = new Date().getTime();
+                 console.log(start);
                  //json_parser = new OpenLayers.Format.GeoJSON();
                  feature_out = olGeoJSON.read(response.priv.responseText);
-                 var tiles;
-                  if (jurisdiction_geoms.length > 0){
+                 var tiles = hasData(feature_out);
+                  /*if (jurisdiction_geoms.length > 0){
                      // tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
                      tiles = hasData(feature_out);
                   }else{
                       tiles = hasData(feature_out);
-                  }
+                  }*/
                   
                   for (var i=0; i<tiles.length; i++){
                     var f = tiles[i];
@@ -366,6 +368,9 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
                       document.getElementById("warning").style.display =  "inline";*/
                       //container.setAttribute("hidden","hidden");
                   }
+                  
+                  end = new Date().getTime();
+                  console.log(end);
              }
          }
      };
@@ -378,18 +383,27 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
 function selection_bounds(map_bounds, highlight_layer) {
     
     var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
-    var jstsSelectionBox= jstsParser.read(olGeoJSON.write(transformed_bounds.toGeometry()))
-    var jstsIntersection = jstsJurisdictionGeoms.intersection(jstsSelectionBox);
-    var olIntersection = olGeoJSON.read(jstsWriter.write(jstsIntersection));
-    
-    var intersecting_filter = new OpenLayers.Filter.Spatial({
-        type: OpenLayers.Filter.Spatial.INTERSECTS,
-        property: "the_geom",
-        value: transformed_bounds.toGeometry()
-    });
+    var filter;
+    if (jurisdiction_geoms.length > 0){
+        var jstsSelectionBox= jstsParser.read(olGeoJSON.write(transformed_bounds.toGeometry()))
+        var jstsIntersection = jstsJurisdictionGeoms.intersection(jstsSelectionBox);
+        var olIntersection = olGeoJSON.read(jstsWriter.write(jstsIntersection));
+        console.log(olIntersection);
+        
+        filter = new OpenLayers.Filter.Spatial({
+            type: OpenLayers.Filter.Spatial.INTERSECTS,
+            property: "the_geom",
+            value: transformed_bounds.toGeometry()
+        });
+    }else{
+        filter= new OpenLayers.Filter.Spatial({
+            type: OpenLayers.Filter.Spatial.INTERSECTS,
+            property: "the_geom",
+            value: transformed_bounds.toGeometry() });
+    }
     
     //filterSelectedTiles(box_filter, false, true);
-    filterSelectedTiles(intersecting_filter, false, true);
+    filterSelectedTiles(filter, false, true);
 }
 
 /*
@@ -406,9 +420,8 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 jurisdiction_geoms = juris_vec_layer.features;
                 var tmp_geoms=new javascript.util.ArrayList();
                 tmp = jstsParser.read(response.priv.responseText);
-                console.log(tmp.features);
                 for (var i=0; i< tmp.features.length; i++){
-                    console.log(tmp.features[i].geometry);
+                    //console.log(tmp.features[i].geometry);
                     tmp_geoms.add(tmp.features[i].geometry);
                 }
                 console.log(tmp_geoms.isEmpty());
