--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -391,7 +391,7 @@ function selection_bounds(map_bounds, highlight_layer) {
         for (var i=0; i < jstsJurisdictionGeoms.length; i++){
             jstsIntersections.add(jstsJurisdictionGeoms[i].intersection(jstsSelectionBox));
         }
-        geomCombiner = new jsts.geom.GeometryCombiner(jstsIntersections);
+        geomCombiner = new jsts.geom.util.GeometryCombiner(jstsIntersections);
         var olIntersection = olGeoJSON.read(jstsWriter.write(geomCombiner.combine()));
         console.log(olIntersection);
         
