--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -386,6 +386,7 @@ function selection_bounds(map_bounds, highlight_layer) {
     if (jurisdiction_geoms.length > 0){
         var jstsSelectionBox= jstsParser.read(olGeoJSON.write(transformed_bounds.toGeometry()));
         var jstsIntersection = jstsJurisdictionGeoms.intersection(jstsSelectionBox);
+        console.log(jstsIntersection);
         console.log(jstsWriter.write(jstsIntersection));
         var olIntersection = olGeoJSON.parseGeometry(jstsWriter.write(jstsIntersection));
         console.log(olIntersection);
