--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -385,8 +385,19 @@ function selection_bounds(map_bounds, highlight_layer) {
     var filter;
     if (jurisdiction_geoms.length > 0){
         var jstsSelectionBox= jstsParser.read(olGeoJSON.write(transformed_bounds.toGeometry()));
-        var jstsIntersection = jstsJurisdictionGeoms.intersection(jstsSelectionBox);
+        console.log(jstsSelectionBox);
+        //var jstsIntersection = jstsJurisdictionGeoms.intersection(jstsSelectionBox);
+        var jstsIntersection = new jsts.geom.MultiPolygon();
         console.log(jstsIntersection);
+        
+        
+        for (var i=0; i< jstsJurisdictionGeoms.length; i++){
+                    //jstsJurisdictionGeoms.push(tmp.features[i].geometry);
+                    jstsIntersection.union(jstsJurisdictionGeoms[i].intersection(jstsSelectionBox));
+                    console.log(jstsJurisdictionGeoms[i].intersection(jstsSelectionBox));
+                    //jstsJurisdictionGeoms.union(tmp.features[i].geometry);
+        }
+        
         console.log(jstsWriter.write(jstsIntersection));
         var olIntersection = olGeoJSON.parseGeometry(jstsWriter.write(jstsIntersection));
         console.log(olIntersection);
@@ -394,7 +405,7 @@ function selection_bounds(map_bounds, highlight_layer) {
         filter = new OpenLayers.Filter.Spatial({
             type: OpenLayers.Filter.Spatial.INTERSECTS,
             property: "the_geom",
-            value: olIntersection.toGeometry()
+            value: olIntersection
         });
     }else{
         filter= new OpenLayers.Filter.Spatial({
@@ -420,11 +431,11 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 juris_vec_layer.addFeatures(feature_out);
                 jurisdiction_geoms = juris_vec_layer.features;
                 //jstsJurisdictionGeoms=new javascript.util.ArrayList();
-                jstsJurisdictionGeoms=new jsts.geom.MultiPolygon();
+                jstsJurisdictionGeoms=[];
                 tmp = jstsParser.read(response.priv.responseText);
                 for (var i=0; i< tmp.features.length; i++){
-                    //jstsJurisdictionGeoms.push(tmp.features[i].geometry);
-                    jstsJurisdictionGeoms.union(tmp.features[i].geometry);
+                    jstsJurisdictionGeoms.push(tmp.features[i].geometry);
+                    //jstsJurisdictionGeoms.union(tmp.features[i].geometry);
                 }
 
             }
