--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -50,8 +50,8 @@ if ("{{test_mode}}"=="True"){
 }
 
 {% autoescape off %}
-console.log ({{grid | safe}});
-console.log ({{jurisdiction | safe}});
+console.log ("{{grid | safe}}");
+console.log ("{{jurisdiction | safe}}");
 
 var options = {{ viewer| safe }};
 var app, map;
